src/test/deca/syntax/invalid/class/method/missing_parentheses_11.deca
// Description:
//    Tests a syntactically incorrect program for a method declaration missing parentheses
//
// Results:
//    Line 11 : Error, expected '('.
//
// History:
//    created on 07/01/2025

class TestClass {
    void methodName {
        int a = 10;
    }
}